--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1557,6 +1557,22 @@ $\E(X) = 1$
   \end{sol}
 \end{problem}
 
+
+
+\section{Начала Евклида}
+
+\begin{problem}
+Байден и Трамп приходят в случайный момент времени от полуночи до часа ночи в Белый Дом независимо друг от друга.
+Байден ждёт $6$ минут, а Трамп — $15$.
+
+Какова вероятность того, что они застанут друг друга?
+  \begin{sol}
+  \end{sol}
+\end{problem}
+
+
+
+
 \begin{problem}
 Абу Али Хусейн ибн Абдуллах ибн аль-Хасан ибн Али ибн Сина\footnote{
   \textarab[utf]{ابو علی حسین بن عبدالله بن سینا}
@@ -1565,16 +1581,16 @@ $\E(X) = 1$
 
 Какова вероятность того, что между любыми точками будет расстояние не меньше единицы?
 \begin{sol}
-$21^{10}/30^{10}$
+Для создания «хорошей конфигурации» выберем 10 точек на отрезке длины 21 и сделаем 9 вставок длины 1 между ними, $21^{10}/30^{10}$.
 \end{sol}
 \end{problem}
-  
+
 
 
 \begin{problem}
 Аня хватается за верёвку в форме окружности в произвольной точке.
-Боря берёт мачете и с завязанными глазами разрубает верёвку в двух случайных независимых местах. 
-Аня забирает себе тот кусок, за который держится. Боря забирает оставшийся кусок. 
+Боря берёт мачете и с завязанными глазами разрубает верёвку в двух случайных независимых местах.
+Аня забирает себе тот кусок, за который держится. Боря забирает оставшийся кусок.
 Вся верёвка имеет единичную длину.
   \begin{enumerate}
   \item Чему равна ожидаемая длина куска верёвки, доставшегося Ане?
@@ -1583,7 +1599,7 @@ $21^{10}/30^{10}$
 \begin{sol}
   \begin{enumerate}
   \item Мысленно отметим на окружности три точки: места ударов Бориса и точку,
-  где схватилась Анна. 
+  где схватилась Анна.
   Можно считать, что эти три точки равномерно\addtag{распределение!равномерное} и независимо распределены по окружности.
   Следовательно, среднее расстояние между соседними точками равно $1/3$.
   Аня берёт два кусочка, слева и справа от своей точки.
@@ -1595,25 +1611,28 @@ $21^{10}/30^{10}$
   \end{enumerate}
 \end{sol}
 \end{problem}
-    
+
 \begin{problem}
-Города Левск и Правск соединены железной дорогой. 
-Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час. 
-Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени, 
-дождаться первого проходящего мимо поезда и записать его направление. 
-Поезда обоих направлений в его записях встречаются одинаково часто. 
+Города Левск и Правск соединены железной дорогой.
+Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час.
+Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени,
+дождаться первого проходящего мимо поезда и записать его направление.
+Поезда обоих направлений в его записях встречаются одинаково часто.
 
 \begin{enumerate}
     \item В скольки минут пути на поезде от ближайшего города он живёт?
     \item Сколько в среднем он ждёт поезда?
 \end{enumerate}
 \begin{sol}
-Рисуем картинку, по горизонтальной оси откладываем время, по вертикальной координаты поездов. 
+Рисуем картинку, по горизонтальной оси откладываем время, по вертикальной координаты поездов.
 Получаем, что он живёт в 15 минутах от ближайшего города и ждать поезда в среднем тоже 15 минут.
 
-Задача от Виктора Прасолова. 
+Задача от Виктора Прасолова.
 \end{sol}
 \end{problem}
+
+
+
 
 
 \section{Великий Комбинатор}
@@ -1869,8 +1888,7 @@ $\sigma$-алгеброй на $\Omega$?
 в тех случаях, когда этот предел существует.
 
 Плотность Чезаро показывает, какую «долю» от всех натуральных чисел составляет указанное подмножество.
-Теперь рассмотрим все подмножества, имеющие плотность Чезаро,
-$\mathcal{H}=\{A\subseteq \mathbb{N}|\exists \gamma(A)\}$.
+Обозначим с помощью $\cH$ все подмножества, имеющие плотность Чезаро.
 
 \begin{enumerate}
 \item Чему равна плотность Чезаро у нечётных чисел?
