--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -242,7 +242,8 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 \newcommand{\addtag}[1]{\index{#1}}
 
 \title{Заметки к семинарам по вероятностям}
-\author{\url{https://github.com/bdemeshev/probability_pro}}
+\author{\url{https://github.com/bdemeshev/probability_pro} \\
+зеркало: \url{https://gitlab.com/bdemeshev/probability_pro}}
 \date{\today}
 
 
@@ -318,7 +319,12 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 В вазе пять неотличимых с виду конфет.
 Две без ореха и три — с орехом. Маша ест конфеты выбирая их наугад до тех пор,
 пока не съест первую конфету с орехом. Обозначим $X$ — число съеденных конфет.
-Найдите $\P(X=2)$, $\P(X>1)$, $\E(X)$.
+
+\begin{enumerate}
+ \item Найдите все возможные значения величины $X$ и их вероятности.
+ \item Найдите $\P(X>1)$.
+ \item Найдите ожидание $\E(X)$.
+\end{enumerate}
 \begin{sol}
 Нарисуем дерево, обозначая в вершинах «стадии» эксперимента, в листьях — итоговый результат,
 а «ветки» будем подписывать вероятностями выпадения\footnote{В целях краткости и читаемости, подписи «стадий» можно обозначать символически. В нашем случае символическая запись «1х 3о» означает, что в вазе 1 конфета с орехом и 3 — без ореха}.
@@ -386,12 +392,12 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 \begin{problem}
 В коробке находится четыре внешне одинаковые лампочки,  две из них исправны.
 Лампочки извлекают из коробки по одной до тех пор, пока не будут извлечены обе исправные.
+Рассмотрим общее количество извлечённых лампочек $N$.
 \begin{enumerate}
-\item Какова вероятность того, что опыт закончится извлечением трёх лампочек?
+\item Найдите все возможные значения $N$ и их вероятности.
 \item Каково ожидаемое количество извлеченных лампочек?
 \end{enumerate}
 \begin{sol}
-Пусть $N$ — количество извлечённых лампочек.
 Нарисуем дерево
 
 \begin{center}
@@ -465,12 +471,18 @@ P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{
 \end{problem}
 
 \begin{problem}
-Маша подкидывает монетку\addtag{монетка}.
-Если в первый раз монетка\addtag{монетка} выпала орлом, то Маша подкидывает монетку ещё один раз,
-если решкой — то ещё два раза. Больше Маша монетку\addtag{монетка} не подкидывает!
-Пусть $X$ — количество выпавших орлов.
+У Маши две монетки: золотая и серебряная.
+Сначала Маша подкидывает золотую монетку\addtag{монетка}.
+Если золотая монетка\addtag{монетка} выпала орлом, то Маша подкидывает серебряную монетку один раз.
+Если золотая монетка выпала решкой — то подкидывает серебряную два раза.
 
-Найдите вероятности $\P(X=0)$, $\P(X=1)$, \ldots и ожидание $\E(X)$.
+Пусть $X$ — общее количество выпавших орлов на золотой и серебряной монетках.
+
+\begin{enumerate}
+\item Найдите все возможные значения $X$ и их вероятности.
+\item Каково ожидаемое количество выпавших орлов?
+\end{enumerate}
+
 \begin{sol}
 Нарисуем дерево (подписи рёбер опустим, так как вероятность всегда равна $\frac{1}{2}$)
 
