even better wording

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -551,11 +551,14 @@ P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{
 не обязательно подряд. Ничья невозможна. Из-за равенства сил будем считать,
 что вероятность победы каждой равна $0.5$. Величина $N$ — количество сыгранных партий.
 
-Составьте табличку возможных значений $N$ с их вероятностями.
+\begin{enumerate}
+ \item Составьте табличку возможных значений $N$ с их вероятностями.
+ \item Найдите $\P(N \text{ — чётное})$ и $\E(N)$.
+\end{enumerate}
 
-Найдите $\P(N \text{ — чётное})$, $\E(N)$.
+
 \begin{sol}
-Нарисуем дерево (подписи рёбер опустим, так как вероятность всегда равна $\frac{1}{2}$).
+Нарисуем дерево. Подписи рёбер опустим, так как вероятность всегда равна $\frac{1}{2}$.
 
 \begin{center}
 \begin{tikzpicture}
@@ -695,18 +698,13 @@ p_{30} = \frac{364}{365}\cdot\frac{363}{365}\cdot\ldots\cdot\frac{332}{336}\appr
 
 \begin{problem}
 Наугад из четырех тузов разных мастей выбираются два.
-$\P(\text{они будут разного цвета})$?
+
+Найдите вероятность того, что тузы будут разного цвета.
 \begin{sol}
-
-\begin{align*}
-    \P(\text{разного}) & = \P(\text{первый красный, второй чёрный}) + \P(\text{первый чёрный, второй красный})=\\
-    & = \frac{1}{2} \cdot \frac{1}{1+2} + \frac{1}{2} \cdot \frac{1}{2+1} = \frac{2}{3}
-\end{align*}
-
-
-Сумма в знаменателе — количество оставшихся тузов.
-После выбора одной карты останется один туз такого же цвета и два — противоположного.
-
+Рисуем дерево. Первый туз всегда одного цвета.
+\[
+    \P(\text{тузы разного цвета}) = 1 \cdot \frac{2}{3}.
+\]
 \end{sol}
 \end{problem}
 
