small intro with leftbar

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -116,7 +116,7 @@
 \usepackage{todonotes} % для вставки в документ заметок о том, что осталось сделать
 % \todo{Здесь надо коэффициенты исправить}
 % \missingfigure{Здесь будет Последний день Помпеи}
-% \listoftodos --- печатает все поставленные \todo'шки
+% \listoftodos — печатает все поставленные \todo'шки
 
 
 
@@ -165,7 +165,7 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 \flushbottom                            % Эта команда заставляет LaTeX чуть растягивать строки, чтобы получить идеально прямоугольную страницу
 \righthyphenmin=2                       % Разрешение переноса двух и более символов
 %\pagestyle{plain}                       % Нумерация страниц снизу по центру.
-\widowpenalty=300                     % Небольшое наказание за вдовствующую строку (одна строка абзаца на этой странице, остальное --- на следующей)
+\widowpenalty=300                     % Небольшое наказание за вдовствующую строку (одна строка абзаца на этой странице, остальное — на следующей)
 \clubpenalty=3000                     % Приличное наказание за сиротствующую строку (омерзительно висящая одинокая строка в начале страницы)
 \setlength{\parindent}{1.5em}           % Красная строка.
 %\captiondelim{. }
@@ -251,9 +251,9 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 %\numberwithin{problem}{section}
 
 \Newassociation{sol}{solution}{solution_file}
-% sol --- имя окружения внутри задач
-% solution --- имя окружения внутри solution_file
-% solution_file --- имя файла в который будет идти запись решений
+% sol — имя окружения внутри задач
+% solution — имя окружения внутри solution_file
+% solution_file — имя файла в который будет идти запись решений
 % можно изменить далее по ходу
 \Opensolutionfile{solution_file}[all_solutions]
 % в квадратных скобках фактическое имя файла
@@ -1506,6 +1506,12 @@ p(\alpha)=\begin{cases}
 
 \section{Диаграмма Венна и таблица сопряжённости}
 
+\begin{leftbar}
+ Событие $A^c$ — это событие, противоположное событию $A$, иногда его обозначают как $\bar A$.
+ Буква «c» вверху — это сокращение от английского слова «complement» — дополнение.
+\end{leftbar}
+
+
 \begin{problem}
 Правильный кубик подбрасывают два раза, пусть $X_1$ и $X_2$ — результаты бросков.
 
@@ -1521,7 +1527,7 @@ p(\alpha)=\begin{cases}
 
 \begin{problem}
  События $A$  и  $B$ несовместны, то есть не могут произойти одновременно. Известны вероятности $\P(A)=0.3$, $\P(B)=0.4$.
- Найдите\footnote{Событие $A^c$ — это событие, противоположное событию $A$, иногда его обозначают как $\bar A$.} $\P(A^{c} \cap B^{c} )$.
+ Найдите $\P(A^{c} \cap B^{c} )$.
 \begin{sol}
 
 Несовместные события не могут произойти одновременно, $\P(A\cup B) = \P(A) + \P(B)$ или $\P(A\cap B) = \varnothing$.
@@ -1632,7 +1638,7 @@ $\P({b}) = \P({a,b}) - \P({a}) = \P({b,c}) - \P({c}) = 0.5$
 
 
 \begin{problem}
- Треугольник с вершинами $(0;0)$, $(2;0)$ и $(1;1)$.
+ Рассмотрим треугольник с вершинами $(0;0)$, $(2;0)$ и $(1;1)$.
  Внутри него случайным образом выбирается точка, $X$ — абсцисса точки.
 
  Найдите $\P(X>1)$, $\P(X\in [0.5;1])$, $\E(X)$.
@@ -1649,23 +1655,28 @@ $\E(X) = 1$
 
 
 \begin{problem}
- Треугольник с вершинами $(0;0)$, $(2;0)$ и $(2;1)$.
+ Рассмотрим треугольник с вершинами $(0;0)$, $(2;0)$ и $(2;1)$.
  Внутри него случайным образом выбирается точка, $X$ — абсцисса точки.
 
  \begin{enumerate}
-     \item Найдите $\P(X>1)$, $\P(X\in [0.5;1])$;
-     \item Найдите $\E(X)$ из геометрических соображений. Что больше, $\E(X)$ или 1?
+     \item Найдите $\P(X>1)$, $\P(X\in [0.5;1])$.
      \item Найдите такую линию $x = a$, чтобы вероятности попадания точки правее и левее нее были равны.
+     Это число называется медианой $\Med X$.
+     \item Что больше, ожидание $\E(X)$ или 1?
+     \item Найдите точное значение $\E(X)$ из геометрических соображений.
  \end{enumerate}
 \begin{sol}
   \begin{enumerate}
     \item Можно заметить, что треугольник хорошо делится на четыре одинаковых маленьких, правее $x=1$ лежат три из них, так что $\P(X>1) = 3/4$. Треугольник, лежащий левее $x=1$, подобен большому и так же делится на четыре меньших, три из которых находятся в интервале [0.5;1], следовательно, $\P(X \in [0.5;1]) = 3/4 \cdot 1/4 = 3/16$.
 
+        \item Линия $x = a$ должна делить треугольник на две фигуры равной площади. Правее этой линии будет лежать прямоугольный треугольник с катетами длиной $a$ и $a/2$, а его площадь должна быть равна 0.5. Отсюда $a = \sqrt{2}$.
+
+          \item Если положить треугольник на линию $x=1$, то явно одна из частей перевесит, отсюда $\E(X) > 1$.
+
     \item Вертикальная прямая $x = \E(X)$ должна уравновешивать  треугольную пластинку.
     Для этого она должна проходить через точку пересечения медиан, а медианы этой точкой делятся в пропорции 2:1 от вершины.
     Отсюда $\E(X) = 4/3$.
 
-    \item Линия $x = a$ должна делить треугольник на две фигуры равной площади. Правее этой линии будет лежать прямоугольный треугольник с катетами длиной $a$ и $a/2$, а его площадь должна быть равна 0.5. Отсюда $a = \sqrt{2}$.
 \end{enumerate}
 
     \begin{tikzpicture}[scale=2]
@@ -1759,7 +1770,8 @@ $\E(X) = 1$
 Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час.
 Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени,
 дождаться первого проходящего мимо поезда и записать его направление.
-Поезда обоих направлений в его записях встречаются одинаково часто.
+Поезда обоих направлений в его записях встречаются одинаково часто,
+но стрелочник никогда не видел двух поездов одновременно.
 
 \begin{enumerate}
     \item В скольки минут пути на поезде от ближайшего города он живёт?
@@ -1792,6 +1804,11 @@ $\E(X) = 1$
 
 
 \section{Великий Комбинатор}
+
+\begin{leftbar}
+ Число способов выбрать $k$ различных предметов из $n$ различных предметов, биномиальный коэффициент, $C_n^k = n!/(k! (n-k)!)$. Произносится «цэ из $n$ по $k$».
+ В английской литературе обозначается $\binom{n}{k}$, произносится «$n$ choose $k$».
+\end{leftbar}
 
 \begin{problem}
 \begin{eng}
@@ -1830,7 +1847,7 @@ $\E(X) = 1$
 
 
 \begin{sol}
-Лёва объясняет левую часть, Рома --- правую.
+Лёва объясняет левую часть, Рома — правую.
 % TODO: переписать в ключе Лёва-Рома
 \begin{enumerate}
   \item У Лёвы есть 10 книг, он хочет взять с собой 7.
@@ -1842,7 +1859,7 @@ $\E(X) = 1$
   \item Из 10 человек хотим выбрать одного лидера и 3-х помощников.
   \item Из 10 человек хотим выбрать 3-х орлов и 2-х слонов.
   \item Число всех подмножеств с одним лидером в множестве из 5-ти элементов.
-  \item Строим слова из семи букв, каждая буква --- это $L$ или $R$. В слове должно быть три $L$.
+  \item Строим слова из семи букв, каждая буква — это $L$ или $R$. В слове должно быть три $L$.
   Разобьём слова на группы в зависимости от позиции последней $L$.
   \item В группе 9 человек, четыре мальчика и пять девочек.
   Хотим выбрать любых троих человек.
@@ -1887,6 +1904,7 @@ $\E(X) = 1$
 
 \section{Знание — сила!}
 
+\begin{leftbar}
 Сигма-алгебра, порождённая дискретной случайной величиной $X$, $\sigma(X)$ — список всех событий,
 которые можно сформулировать с помощью случайной величины $X$.
 
@@ -1894,6 +1912,7 @@ $\E(X) = 1$
 Во-первых, в него входят сравнения величины $X$ с любым действительным числом.
 Во-вторых, при выполнении счётного количества логических операций (дополнение, объединение, пересечение) с событиями из этого списка мы получаем
 событие из этого списка.
+\end{leftbar}
 
 
 \begin{problem}
