black to red, separate points

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2328,18 +2328,25 @@ $\cF=\{\emptyset, \Omega, \{\text{дождь}\}, \{\text{солнечно}, \tex
 
 \begin{problem}
  В урне 7 красных, 5 желтых и 11 белых шаров. Два шара
-выбирают наугад. Какова вероятность, что это красный и белый, если
-известно, что они разного цвета?
+выбирают наугад.
+\begin{enumerate}
+\item Какова вероятность того, что буду выбраны разноцветные шары?
+ \item Какова вероятность, что выбраны красный и белый шар, если
+известно, что шары разного цвета?
+\end{enumerate}
 \begin{sol}
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{7\cdot 11 /C_{7+5+11}^2}{(7\cdot 11+5\cdot 11 + 7\cdot 5) /C_{7+5+11}^2 }$
 \end{sol}
 \end{problem}
 
 \begin{problem}
-  В урне 5 белых и 11 черных шаров. Два шара извлекаются по
-очереди. Какова вероятность того, что второй шар будет черным?
-Какова вероятность того, что первый шар — белый, если известно,
-что второй шар — черный?
+  В урне 5 белых и 11 красных шаров. Два шара извлекаются по
+очереди.
+\begin{enumerate}
+ \item Какова вероятность того, что второй шар будет красным?
+ \item Какова вероятность того, что первый шар — белый, если известно,
+что второй шар — красный?
+\end{enumerate}
 \begin{sol}
   $B$ — событие, второй — черный, $\P(B)=11/16$
 
