--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3110,7 +3110,8 @@ X, \text{ если } X\geq a.\\
 «Всякая вещь — или есть, или нет»
 
 Как справедливо заметил исследователь Винни-Пух\addtag{герои!Винни-Пух}, всякая вещь — или есть, или нет. 
-Рассмотрим случайную величину $V$, равную единице, если вещь — есть, и нулю иначе. Допустим вероятность того, что вещь есть равна $0.7$.
+Рассмотрим случайную величину $V$, равную единице, если вещь — есть, и нулю иначе. 
+Вероятность того, что вещь есть равна $0.7$.
 \begin{enumerate}
   \item Составьте табличку со значениями $V$ и их вероятностями;
   \item Найдите $\E(V)$ и $\Var(V)$;
@@ -3169,7 +3170,20 @@ X, \text{ если } X\geq a.\\
 \end{problem}
 
 
+\begin{problem}
+  Садовник сажает 500 деревьев. 
+  Каждое из деревьев приживается независимо от других с вероятностью $0.99$. 
 
+  \begin{enumerate}
+    \item Посчитайте точную вероятность того, что приживутся ровно 499 деревьев. 
+    \item Найдите вероятность того, что приживутся 499 деревьев, примерно, 
+    используя приближение Пуассона. 
+    \item Чему равна фактическая ошибка аппроксимации? 
+    Сильно ли отличается фактическая ошибка аппроксимации от верхней границы $\min\{p, np^2\}$?
+  \end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
 
 
 \newpage
