specify p in Elon Musk

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3158,8 +3158,8 @@ X, \text{ если } X\geq a.\\
   \item Найдите $\P(X = 5)$, $\P(Y = 5)$.
   \item Найдите $\P(X = k)$, $\P(Y = k)$.
   \item Найдите ожидания $\E(X)$ и $\E(Y)$.
-  \item Найдите наиболее вероятные значения величин $X$ и $Y$.
-  \item Найдите наименее вероятные значения величин $X$ и $Y$.
+  \item Найдите наиболее вероятные значения величин $X$ и $Y$, если $p=0.7$.
+  \item Найдите наименее вероятные значения величин $X$ и $Y$, если $p=0.7$.
 \end{enumerate}
   \begin{sol}
     Обозначим $p=0.3$ и $n=10$.
