--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -332,8 +332,6 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 а задачки к семинарам по статистике — \url{https://github.com/bdemeshev/statistics_pro}.
 Если \url{github.com} не открывается, можно заменить его на \url{gitlab.com}.
 
-%TODO: придумать оформление для блока минитеории с полоской слева или около того.
-% рамку — думаю, много, затенение цветом — плохо при печати
 
 \section{Посади дерево}
 
@@ -345,8 +343,9 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 
 \begin{problem}
 В вазе пять неотличимых с виду конфет.
-Две без ореха и три — с орехом. Маша ест конфеты выбирая их наугад до тех пор,
-пока не съест первую конфету с орехом. Обозначим $X$ — число съеденных конфет.
+Две без ореха и три — с орехом. 
+Маша ест конфеты выбирая их наугад до тех пор, пока не съест первую конфету с орехом. 
+Обозначим $X$ — число съеденных конфет.
 
 \begin{enumerate}
  \item Найдите все возможные значения величины $X$ и их вероятности.
@@ -379,7 +378,7 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 \end{center}
 
 Нас интересует вероятность события «$X=2$».
-«Пройдёмся» по дереву, перемножая вероятности, и получим $\P(X=2) = 2/5\cdot3/4 = 3/10$.
+«Пройдёмся» по дереву, перемножая вероятности, и получим $\P(X=2) = 2/5\cdot 3/4 = 3/10$.
 
 Вероятность того, что Маша съест больше одной конфеты можно посчитать двумя способами.
 
@@ -393,7 +392,7 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 Чтобы посчитать математическое ожидание случайной величины, надо знать её закон распределения.
 Случайная величина $X$ дискретна (принимает не более чем счётное количество значений\footnote{В нашем случае $X$ принимает конечное множество значений}), а значит нам потребуется только таблица с всевозможными исходами $X$, и соответстующие им вероятности.
 
-Исходы мы уже нашли – это множество \{1, 2, 3\}. Вероятности мы тоже нашли выше, а значит таблица имеет вид
+Таблица распределения имеет вид
 
 \begin{center}
     \begin{tabular}{lccc}
@@ -404,16 +403,18 @@ keywordstyle=\fontfamily{lmtt}\bfseries
     \end{tabular}
 \end{center}
 
-Математическое ожидание дискретной случайной величины — это просто взвешенная по вероятностям сумма её значений, другими словами – ряд вида $\sum p_i x_i $, где $x_i$ – $i$-e значение случайной величины, а $p_i$ — вероятность выпадения этого значения. В нашем случае
-
+Математическое ожидание дискретной случайной величины — это просто взвешенная по вероятностям сумма её значений, другими словами – ряд вида $\sum x \P(X = x)$, где $x$ – очердное значение случайной величины, а $\P(X=x)$ — вероятность выпадения этого значения. 
+В нашем случае
 \[
-\E(X) = 1\cdot\frac{3}{5} + 2\cdot\frac{3}{10} + 3\cdot\frac{1}{10} = 1.5
+\E(X) = 1\cdot\frac{3}{5} + 2\cdot\frac{3}{10} + 3\cdot\frac{1}{10} = 1.5.
 \]
 
 Попробуем разобраться, что означает равенство математического ожидания какому-то числу.
-В нашем случае неправильным будет сказать, что при очередном выполнении эксперимента, мы ожидаем увидеть исход, равный $1.5$. В конце концов, все исходы – это просто разные количества конфет, а конфет должно быть целое количество.
+В нашем случае неправильным будет сказать, что при очередном выполнении эксперимента, мы ожидаем увидеть исход, равный $1.5$. 
+В конце концов, все исходы – это просто разные количества конфет, а конфет должно быть целое количество.
 
-На самом деле о математическом ожиданиии нужно думать в свете многократного выполнения эксперимента. Если мы будем заставлять Машу есть конфеты из вазы миллион раз\footnote{говоря языком статистики, посмотрим на реализации независимых случайных величин $X_1, X_2, \ldots, X_{1'000'000}$, распределение которых совпадает с распределением $X$}, иногда она будет съедать одну конфету, иногда две, а иногда три. Но значение среднего\footnote{То есть значение случайной величины $\bar{X}=(X_1 + X_2 + \ldots + X_{1'000'000})/1000000$} будет близко к 1.5\footnote{Оно будет \textit{равняться} 1.5 только при стремлении количества наблюдений к бесконечности}.
+На самом деле о математическом ожиданиии нужно думать в свете многократного выполнения эксперимента. 
+Если мы будем заставлять Машу есть конфеты из вазы миллион раз\footnote{говоря языком статистики, посмотрим на реализации независимых случайных величин $X_1, X_2, \ldots, X_{1'000'000}$, распределение которых совпадает с распределением $X$}, иногда она будет съедать одну конфету, иногда две, а иногда три. Но значение среднего\footnote{То есть значение случайной величины $\bar{X}=(X_1 + X_2 + \ldots + X_{1'000'000})/1000000$} будет близко к 1.5\footnote{Оно будет \textit{равняться} 1.5 только при стремлении количества наблюдений к бесконечности}.
 \end{sol}
 \end{problem}
 
@@ -749,7 +750,6 @@ p_{30} = \frac{364}{365}\cdot\frac{363}{365}\cdot\ldots\cdot\frac{332}{336}\appr
 
 
 
-%TODO: Стрелок попадает по мишени с вероятностью 0.3. Какова вероятность того, что до третьего промаха у него будет 5 выстрелов?
 
 
 %TODO Задача о полосе невезения
@@ -2275,7 +2275,7 @@ $\cF=\{\emptyset, \Omega, \{\text{дождь}\}, \{\text{солнечно}, \tex
 Петя выбирает одну монетку\addtag{монетка} наугад и подкидывает её два раза. 
 \begin{enumerate}
  \item Какова вероятность, что оба раза выпадет орёл?
- \item Какова условная вероятность того, что монетка\addtag{монетка} «неправильная»,
+ \item Какова условная вероятность того, что монетка\addtag{монетка} — «неправильная»,
  если орёл выпал два раза?
 \end{enumerate}
 
@@ -3105,6 +3105,19 @@ X, \text{ если } X\geq a.\\
 \newpage
 \section{Брат Бернулли}
 
+\begin{leftbar}
+  Случайная величина $X$ имеет биномиальное распределение с параметрами $n$ и $p$,
+  если она описывает количество «успехов» в серии из $n$ независимых испытаний,
+  а вероятность каждого успеха равна $p$, $X \sim \dBin(n, p)$,
+  \[
+  \P(X = k) = C_n^k p^k (1 - p)^{n-k}.
+  \]
+  Подобная серия испытаний называется испытаниями Бернулли. 
+  Для биномиальных вероятностей действует примерная формула 
+  \[
+  \abs{\P(X = k)  -  \exp(-\lambda)\lambda^k/k!} \leq \min\{p, np^2\}.  
+  \]
+\end{leftbar}
 
 \begin{problem}
 «Всякая вещь — или есть, или нет»
@@ -3118,8 +3131,6 @@ X, \text{ если } X\geq a.\\
   \item Если возможно, нарисуйте функцию распределения и функцию плотности $V$;
   \item Найдите $\E(V)$ и $\Var(V)$, если вероятность того, что вещь — есть равна параметру $p$.
 \end{enumerate}
-
-Определение. Случайная величина $V$ имеет распределение Бернулли с параметром $p$.
 \begin{sol}
 
 \end{sol}
@@ -3137,7 +3148,6 @@ X, \text{ если } X\geq a.\\
   \item Найдите $\P(X=k)$, $\E(X)$ и $\Var(X)$ для произвольных $p$, $n$;
 \end{enumerate}
 
-Определение. Случайная величина $X$ имеет биномиальное распределение с параметрами $n$ и $p$;
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3182,6 +3192,16 @@ X, \text{ если } X\geq a.\\
     Сильно ли отличается фактическая ошибка аппроксимации от верхней границы $\min\{p, np^2\}$?
   \end{enumerate}
 \begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Стрелок попадает по мишени с вероятностью 0.3. 
+Какова вероятность того, что третий промах придётся на седьмой выстрел?
+\begin{sol}
+  Среди первых шести выстрелов должно быть ровно два промаха и четыре попадания. 
+  Шестым выстрелом должен идти промах, $\P(A) = C_6^2 0.3^4 0.7^3$.
 \end{sol}
 \end{problem}
 
