--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3115,8 +3115,9 @@ X, \text{ если } X\geq a.\\
   Подобная серия испытаний называется испытаниями Бернулли. 
   Для биномиальных вероятностей действует примерная формула 
   \[
-  \abs{\P(X = k)  -  \exp(-\lambda)\lambda^k/k!} \leq \min\{p, np^2\}.  
+  \abs{\P(X = k)  -  \exp(-\lambda)\lambda^k/k!} \leq \min\{p, np^2\},  
   \]
+  где $\lambda = \E(X) = np$.
 \end{leftbar}
 
 \begin{problem}
