--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3207,6 +3207,22 @@ X, \text{ если } X\geq a.\\
 \end{problem}
 
 
+\begin{problem}
+  Садовник сажает 500 деревьев. 
+  Каждое из деревьев приживается независимо от других с вероятностью $0.50$. 
+
+  \begin{enumerate}
+    \item Посчитайте точную вероятность того, что приживутся ровно 260 деревьев. 
+    \item Найдите вероятность того, что приживутся 260 деревьев, примерно, 
+    используя локальную теорему Муавра-Лапласа. 
+    \item Чему равна фактическая ошибка аппроксимации? 
+  \end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+
+
 \newpage
 \section{Рождение распределений}
 
