speed viewed by observer

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1828,7 +1828,29 @@ $\E(X) = 1$
 \end{problem}
 
 
+\begin{problem}
+%Саша и Маша одновременно и независимо друг от друга выезжают из противоположных точек МКАД. 
+%Каждый из них равновероятно выбирает направление и 
+%едет ровно один час со случайной скоростью равномерно распределенной от 0 до 100 км в час. 
+%МКАД имеет длину 100 км.
+Саша и Маша находятся на бесконечном шоссе на расстоянии $0.5$ друг от друга. 
+Они одновременно и независимо выезжают в случайных направлениях.  
+Далее Саша и Маша едут один час со случайными скоростьями, равномерно распределенными на отрезке от $0$ до $1$. 
 
+\begin{enumerate}
+  \item Постройте плотность Машиной скорости.
+  \item \label{item:ms-b} Как выглядит плотность Машиной скорости с точки зрения Саши, если они встретились, двигаясь в одном направлении?
+  \item \label{item:ms-c} Как выглядит плотность Машиной скорости с точки зрения Саши, если они встретились, двигаясь в противоположном направлении?
+  \item Как изменятся ответы на пункты (\ref{item:ms-b}) и (\ref{item:ms-c}), если Саша и Маша изначально находятся на расстоянии $0.2$?
+\end{enumerate}
+
+\begin{sol}
+\begin{minipage}{\textwidth}
+\includegraphics[scale=0.25]{figure/speed_observed_density.jpg}
+\end{minipage}
+\end{sol}
+\end{problem}
+  
 
 
 \section{Великий Комбинатор}
